--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon AddAllProducts.js"
   },
   "author": "",
   "license": "ISC",
